# supoclip

./: .env.example  .env.sample  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  docker-compose.yml  init.sql  start.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/fonts/: FONT_PACK_TOP10.md
backend/migrations/: 002_add_transcription_provider_and_user_secret.sql  003_add_ai_provider_and_llm_user_keys.sql  004_add_user_default_processing_settings.sql  005_add_default_ai_model.sql  006_add_user_default_font_style_settings.sql  006_add_zai_key_profiles_and_routing.sql  007_add_source_url.sql  008_add_review_before_render_and_clip_drafts.sql  009_add_timeline_editor_controls.sql  010_add_default_review_before_render_setting.sql  011_add_task_subtitle_style.sql  012_add_ollama_provider_support.sql  013_add_advanced_ollama_support.sql
backend/src/: ai.py  config.py  database.py  main.py  main_refactored.py  models.py  subtitle_style.py  task_subtitle_style.py  transcription_limits.py  video_utils.py  worker_main.py  youtube_utils.py
backend/src/api/routes/: media.py  tasks.py
backend/src/repositories/: clip_repository.py  draft_clip_repository.py  source_repository.py  task_repository.py
backend/src/services/: ai_model_catalog_service.py  secret_service.py  task_service.py  video_service.py
backend/src/workers/: job_queue.py  progress.py  tasks.py
docs/: config.md  local-host-mappings.md
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  (+2 more)
(+33 files in other folders)
